# litecoinz

./: .gitignore  CONTRIBUTING.md  COPYING  Dockerfile  INSTALL  INSTALL.md  LICENSE  Makefile.am  README.md  configure.ac  docker-entrypoint.sh  libbitcoinconsensus.pc.in
.github/: ISSUE_TEMPLATE.md
contrib/: README.md  gitian-build.py  litecoinz-cli.bash-completion  litecoinz-tx.bash-completion  litecoinzd.bash-completion
depends/: Makefile  README.md  config.site.in  description.md  funcs.mk
doc/: Doxyfile.in  README.md  README_osx.md  README_windows.txt  amqp.md  assets-attribution.md  build-osx.md  build-unix.md  build-windows.md  (+20 more)
src/: Makefile.am  Makefile.gtest.include  Makefile.qt.include  Makefile.qttest.include  Makefile.snark.include  Makefile.test.include  addrdb.cpp  addrdb.h  addressindex.h  addrman.cpp  addrman.h  alert.cpp  alert.h  amount.cpp  amount.h  arith_uint256.h  asyncrpcoperation.cpp  asyncrpcoperation.h  asyncrpcqueue.cpp  asyncrpcqueue.h  base58.cpp  base58.h  bech32.cpp  bitcoin-cli-res.rc  bitcoin-cli.cpp  bitcoin-tx.cpp  bitcoind.cpp  blockencodings.cpp  bloom.cpp  bloom.h  chain.cpp  chain.h  chainparams.cpp  chainparams.h  chainparamsbase.cpp  chainparamsbase.h  chainparamsseeds.h  checkpoints.cpp  checkpoints.h  checkqueue.h  (+102 more)
src/compat/: byteswap.h  endian.h  glibc_sanity.cpp
src/consensus/: consensus.h  merkle.cpp  params.h  upgrades.cpp  upgrades.h  validation.h
src/crypto/: common.h  equihash.cpp  equihash.h  sha256.cpp
src/gtest/: json_test_vectors.cpp  json_test_vectors.h  main.cpp  test_checkblock.cpp  test_checkblockdelay.cpp  test_checktransaction.cpp  test_circuit.cpp  test_deprecation.cpp  test_foundersreward.cpp  test_httprpc.cpp  test_joinsplit.cpp  test_keys.cpp  test_keystore.cpp  test_mempool.cpp  test_merkletree.cpp  test_metrics.cpp  test_miner.cpp  test_noteencryption.cpp  test_paymentdisclosure.cpp  test_pedersen_hash.cpp  test_pow.cpp  test_proofs.cpp  test_rpc.cpp  test_sapling_note.cpp  test_transaction.cpp  test_transaction_builder.cpp  test_txid.cpp  test_upgrades.cpp  test_validation.cpp
src/policy/: fees.cpp  fees.h  policy.cpp  policy.h
src/pow/tromp/: equi.h  equi_miner.h
src/pow/tromp/blake2-avx2/: blake2b-load-avx2-simple.h
src/primitives/: block.cpp  block.h  transaction.cpp  transaction.h
src/qt/: addressbookdialog.cpp  addressbookpage.cpp  addresstablemodel.cpp  addresstablemodel.h  askpassphrasedialog.cpp  bantablemodel.cpp  bantablemodel.h  bitcoin.cpp  bitcoin.qrc  bitcoinaddressvalidator.cpp  bitcoinamountfield.cpp  bitcoinamountfield.h  bitcoingui.cpp  bitcoingui.h  bitcoinunits.cpp  bitcoinunits.h  clientmodel.cpp  clientmodel.h  coincontroldialog.cpp  coincontroldialog.h  coinselectiondialog.cpp  coinselectiondialog.h  coinselectiontablemodel.cpp  editaddressdialog.cpp  guiconstants.h  guiutil.cpp  guiutil.h  intro.cpp  litecoinzaddressvalidator.cpp  networkstyle.cpp  openuridialog.cpp  optionsdialog.cpp  optionsdialog.h  optionsmodel.cpp  optionsmodel.h  overviewpage.cpp  overviewpage.h  paymentrequestplus.cpp  paymentrequestplus.h  paymentserver.cpp  (+42 more)
src/qt/forms/: optionsdialog.ui  overviewpage.ui  sendzcoinsentry.ui  shieldcoinsdialog.ui
src/qt/locale/: bitcoin_ru.ts
src/qt/res/icons/: litecoinz.icns
src/qt/test/: paymentservertests.cpp  test_main.cpp  uritests.cpp
src/rpc/: blockchain.cpp  client.cpp  mining.cpp  misc.cpp  net.cpp  protocol.cpp  protocol.h  rawtransaction.cpp  server.cpp  server.h
src/script/: interpreter.cpp  interpreter.h  script.cpp  script.h  script_error.cpp  sigcache.cpp  sigcache.h  sign.cpp  sign.h  standard.cpp  standard.h  zcashconsensus.cpp  zcashconsensus.h
src/snark/: Makefile
src/snark/libsnark/common/: profiling.cpp
src/snark/src/common/: profiling.cpp
src/support/: pagelocker.cpp  pagelocker.h
src/support/allocators/: secure.h  zeroafterfree.h
src/test/: Checkpoints_tests.cpp  DoS_tests.cpp  accounting_tests.cpp  addrman_tests.cpp  alert_tests.cpp  allocator_tests.cpp  arith_uint256_tests.cpp  base32_tests.cpp  base58_tests.cpp  base64_tests.cpp  bech32_tests.cpp  bignum.h  bip32_tests.cpp  bloom_tests.cpp  checkblock_tests.cpp  coins_tests.cpp  compress_tests.cpp  crypto_tests.cpp  dbwrapper_tests.cpp  getarg_tests.cpp  hash_tests.cpp  key_tests.cpp  main_tests.cpp  mempool_tests.cpp  merkle_tests.cpp  miner_tests.cpp  mruset_tests.cpp  multisig_tests.cpp  netbase_tests.cpp  pmt_tests.cpp  policyestimator_tests.cpp  pow_tests.cpp  prevector_tests.cpp  raii_event_tests.cpp  reverselock_tests.cpp  rpc_tests.cpp  rpc_wallet_tests.cpp  sanity_tests.cpp  scheduler_tests.cpp  script_P2PKH_tests.cpp  (+15 more)
src/test/data/: base58_keys_invalid.json  base58_keys_valid.json  bitcoin-util-test.json  script_invalid.json  script_valid.json  tx_invalid.json  tx_valid.json
src/univalue/lib/: univalue.cpp
src/wallet/: asyncrpcoperation_mergetoaddress.cpp  asyncrpcoperation_mergetoaddress.h  asyncrpcoperation_saplingmigration.cpp  asyncrpcoperation_saplingmigration.h  asyncrpcoperation_sendmany.cpp  asyncrpcoperation_sendmany.h  asyncrpcoperation_shieldcoinbase.cpp  asyncrpcoperation_shieldcoinbase.h  crypter.cpp  crypter.h  db.cpp  db.h  paymentdisclosure.cpp  paymentdisclosure.h  paymentdisclosuredb.cpp  paymentdisclosuredb.h  rpcdisclosure.cpp  rpcdump.cpp  rpcwallet.cpp  rpcwallet.h  wallet.cpp  wallet.h  wallet_ismine.cpp  wallet_ismine.h  walletdb.cpp  walletdb.h
src/wallet/gtest/: test_paymentdisclosure.cpp  test_wallet.cpp  test_wallet_zkeys.cpp
src/wallet/test/: crypto_tests.cpp  wallet_tests.cpp
src/zcash/: Address.cpp  Address.hpp  CreateJoinSplit.cpp  GenerateParams.cpp  IncrementalMerkleTree.cpp  IncrementalMerkleTree.hpp  JoinSplit.cpp  JoinSplit.hpp  Note.cpp  Note.hpp  NoteEncryption.cpp  NoteEncryption.hpp  Proof.cpp  Proof.hpp  prf.cpp  prf.h  util.cpp  zip32.cpp  zip32.h
src/zcash/circuit/: gadget.tcc  utils.tcc
src/zen/: delay.cpp  delay.h
src/zmq/: zmqabstractnotifier.cpp  zmqabstractnotifier.h  zmqconfig.h  zmqnotificationinterface.cpp  zmqnotificationinterface.h  zmqpublishnotifier.cpp  zmqpublishnotifier.h
(+152 files in other folders)
